<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/container"
        android:minHeight="48dip"
        android:paddingTop="16dip"
        android:paddingBottom="12dip"
        android:paddingLeft="24dip"
        android:paddingRight="24dip"
        android:background="#323232"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dip"
            android:layout_marginLeft="24dip"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/snackbar_message_text_color"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_alignParentRight="true"/>

        <TextView
            android:id="@+id/message"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/action"
            android:layout_width="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="@color/snackbar_action_text_color"
            android:textSize="14sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</merge>